--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;200;300;500;,400;0,900;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>React Portfolio Website</title>
 
