--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+    <!-- EmailJS  -->
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js'></script>
+<script type='text/javascript'>
+   (function(){
+      emailjs.init("user_pKrnkSoRtlwzu8n1WSHDY");
+   })();
+</script>
+
     <title>React Portfolio Website</title>
 
       <style>
